--- a/tests.ipynb
+++ b/tests.ipynb
@@ -93,6 +93,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# push tableau route\n",
+    "df = pd.read_csv('EquitySummaryInBase.csv', sep=';')\n",
+    "\n",
+    "res = requests.post(\n",
+    "    f'http://localhost:5000/tableau/data/ibnav/upload', \n",
+    "    json={ 'data': df.to_dict(orient='records') }, \n",
+    "    auth=HTTPBasicAuth(os.getenv('BASIC_AUTH_USERNAME'), os.getenv('BASIC_AUTH_PASSWORD')))\n",
+    "json.loads(res.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
