--- a/tests.ipynb
+++ b/tests.ipynb
@@ -110,6 +110,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = pd.read_json('app/static/data/ib_position.json')\n",
+    "\n",
+    "df[ df['reportDate'] == df['reportDate'].max() ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# push tableau route\n",
     "df = pd.read_csv('EquitySummaryInBase.csv', sep=';')\n",
     "\n",
@@ -117,6 +128,25 @@
     "    f'http://localhost:5000/tableau/data/ibnav/upload', \n",
     "    json={ 'data': df.to_dict(orient='records') }, \n",
     "    auth=HTTPBasicAuth(os.getenv('BASIC_AUTH_USERNAME'), os.getenv('BASIC_AUTH_PASSWORD')))\n",
+    "json.loads(res.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# push tableau route\n",
+    "df = pd.read_json('centrale_histo.json', orient='records')\n",
+    "#df = df[0:5]\n",
+    "\n",
+    "res = requests.post(\n",
+    "    f'http://localhost:5000/tableau/data/centrale/histo/upload', \n",
+    "    json={ 'data': df.to_dict(orient='records') }, \n",
+    "    auth=HTTPBasicAuth(os.getenv('BASIC_AUTH_USERNAME'), os.getenv('BASIC_AUTH_PASSWORD')),\n",
+    "    timeout=120\n",
+    ")\n",
     "json.loads(res.content)"
    ]
   },
