--- a/tests.ipynb
+++ b/tests.ipynb
@@ -132,10 +132,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# push tableau route\n",
     "df = pd.read_json('centrale_histo.json', orient='records')\n",
@@ -146,6 +144,22 @@
     "    json={ 'data': df.to_dict(orient='records') }, \n",
     "    auth=HTTPBasicAuth(os.getenv('BASIC_AUTH_USERNAME'), os.getenv('BASIC_AUTH_PASSWORD')),\n",
     "    timeout=120\n",
+    ")\n",
+    "json.loads(res.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = requests.post(\n",
+    "    f'http://localhost:5000/tableau/data/centrale/histo/upload', \n",
+    "    json={ 'data': df.to_dict(orient='records') }, \n",
+    "    auth=HTTPBasicAuth(os.getenv('BASIC_AUTH_USERNAME'), os.getenv('BASIC_AUTH_PASSWORD')),\n",
+    "    timeout=120,\n",
+    "    files = {'file': open('centrale_histo.zip','rb')}\n",
     ")\n",
     "json.loads(res.content)"
    ]
