--- a/tests.ipynb
+++ b/tests.ipynb
@@ -267,6 +267,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "res = requests.get(\n",
+    "    f'http://localhost:5000/tableau/data/matrix/sectors', \n",
+    "#    json={ 'data': df.to_dict(orient='records') }, \n",
+    "#    auth=HTTPBasicAuth(os.getenv('BASIC_AUTH_USERNAME'), os.getenv('BASIC_AUTH_PASSWORD'))\n",
+    ")\n",
+    "\n",
+    "json.loads(res.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
