--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,6 +279,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def frDate_usDate(frDate):\n",
+    "    return f'{frDate[-4:]}-{frDate[3:5]}-{frDate[:2]}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': 2704,\n",
+       " 'status': 'ok',\n",
+       " 'submittedDatetime': '2019-06-11T17:05:52.474419'}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('SC SPX LONG.csv', sep=';')\n",
+    "#df.head()\n",
+    "\n",
+    "data = []\n",
+    "\n",
+    "for tag in df.to_dict(orient='records'):\n",
+    "    data.append({\n",
+    "        'source': 'bbgPort',\n",
+    "        'ticker': tag['PK'],\n",
+    "        'srcDate': frDate_usDate(tag['RebalancedDate']),\n",
+    "        'tag': 'SC SPX LONG'\n",
+    "    })\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "#df.head()\n",
+    "\n",
+    "res = requests.post(\n",
+    "    f'http://localhost:5000/tableau/data/tag/upload', \n",
+    "    json={ 'data': df.to_dict(orient='records') }, \n",
+    "    auth=HTTPBasicAuth(os.getenv('BASIC_AUTH_USERNAME'), os.getenv('BASIC_AUTH_PASSWORD'))\n",
+    ")\n",
+    "json.loads(res.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -301,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
