--- a/tests.ipynb
+++ b/tests.ipynb
@@ -28,22 +28,266 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.date(2019, 6, 14)"
+       "datetime.date(2019, 8, 19)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.to_datetime('today').date()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>asset.COUNTRY_ISO.ISOALPHA2Code</th>\n",
+       "      <th>asset.CRNCY</th>\n",
+       "      <th>asset.GICS_INDUSTRY_GROUP_NAME</th>\n",
+       "      <th>asset.GICS_INDUSTRY_NAME</th>\n",
+       "      <th>asset.GICS_SECTOR_NAME</th>\n",
+       "      <th>asset.ID_ISIN</th>\n",
+       "      <th>asset.NAME</th>\n",
+       "      <th>asset.region.MatrixRegion</th>\n",
+       "      <th>averageAbsPxChg</th>\n",
+       "      <th>averageAbsSurp</th>\n",
+       "      <th>...</th>\n",
+       "      <th>raw.sources.bbg.data.MOV_AVG_20D</th>\n",
+       "      <th>raw.sources.bbg.data.MOV_AVG_50D</th>\n",
+       "      <th>raw.sources.bbg.data.REL_1M</th>\n",
+       "      <th>raw.sources.bbg.data.REL_3M</th>\n",
+       "      <th>raw.sources.bbg.data.VOLATILITY_90D</th>\n",
+       "      <th>raw.sources.bbg.data.VOL_PERCENTILE</th>\n",
+       "      <th>surpPxChgCorr</th>\n",
+       "      <th>ticker</th>\n",
+       "      <th>ticker.given</th>\n",
+       "      <th>ticker.ultimate_ticker</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>Software &amp; Services</td>\n",
+       "      <td>Software</td>\n",
+       "      <td>Information Technology</td>\n",
+       "      <td>US74346Y1038</td>\n",
+       "      <td>PROS HOLDINGS INC</td>\n",
+       "      <td>U.S.A.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-2.948991</td>\n",
+       "      <td>16.539820</td>\n",
+       "      <td>33.739412</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>PRO US EQUITY</td>\n",
+       "      <td>PRO US EQUITY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BE</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>Capital Goods</td>\n",
+       "      <td>Machinery</td>\n",
+       "      <td>Industrials</td>\n",
+       "      <td>BE0003807246</td>\n",
+       "      <td>PICANOL</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-11.153650</td>\n",
+       "      <td>-15.944750</td>\n",
+       "      <td>28.909780</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>PIC BB EQUITY</td>\n",
+       "      <td>PIC BB EQUITY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>US</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>Retailing</td>\n",
+       "      <td>Specialty Retail</td>\n",
+       "      <td>Consumer Discretionary</td>\n",
+       "      <td>US76009N1000</td>\n",
+       "      <td>RENT-A-CENTER INC</td>\n",
+       "      <td>U.S.A.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-4.942474</td>\n",
+       "      <td>8.047232</td>\n",
+       "      <td>43.979592</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>RCII US EQUITY</td>\n",
+       "      <td>RCII US EQUITY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>HK</td>\n",
+       "      <td>HKD</td>\n",
+       "      <td>Transportation</td>\n",
+       "      <td>Transportation Infrastructure</td>\n",
+       "      <td>Industrials</td>\n",
+       "      <td>BMG9880L1028</td>\n",
+       "      <td>YUEXIU TRANSPORT INFRASTRUCT</td>\n",
+       "      <td>Emerging</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.442226</td>\n",
+       "      <td>-5.659809</td>\n",
+       "      <td>18.099380</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1052 HK EQUITY</td>\n",
+       "      <td>1426564D CH EQUITY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CN</td>\n",
+       "      <td>HKD</td>\n",
+       "      <td>Automobiles &amp; Components</td>\n",
+       "      <td>Automobiles</td>\n",
+       "      <td>Consumer Discretionary</td>\n",
+       "      <td>CNE100000296</td>\n",
+       "      <td>BYD CO LTD-H</td>\n",
+       "      <td>Emerging</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.323765</td>\n",
+       "      <td>-10.065620</td>\n",
+       "      <td>41.477470</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1211 HK EQUITY</td>\n",
+       "      <td>1211 HK EQUITY</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 63 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  asset.COUNTRY_ISO.ISOALPHA2Code asset.CRNCY asset.GICS_INDUSTRY_GROUP_NAME  \\\n",
+       "0                              US         USD            Software & Services   \n",
+       "1                              BE         EUR                  Capital Goods   \n",
+       "2                              US         USD                      Retailing   \n",
+       "3                              HK         HKD                 Transportation   \n",
+       "4                              CN         HKD       Automobiles & Components   \n",
+       "\n",
+       "        asset.GICS_INDUSTRY_NAME  asset.GICS_SECTOR_NAME asset.ID_ISIN  \\\n",
+       "0                       Software  Information Technology  US74346Y1038   \n",
+       "1                      Machinery             Industrials  BE0003807246   \n",
+       "2               Specialty Retail  Consumer Discretionary  US76009N1000   \n",
+       "3  Transportation Infrastructure             Industrials  BMG9880L1028   \n",
+       "4                    Automobiles  Consumer Discretionary  CNE100000296   \n",
+       "\n",
+       "                     asset.NAME asset.region.MatrixRegion  averageAbsPxChg  \\\n",
+       "0             PROS HOLDINGS INC                    U.S.A.              NaN   \n",
+       "1                       PICANOL                    Europe              NaN   \n",
+       "2             RENT-A-CENTER INC                    U.S.A.              NaN   \n",
+       "3  YUEXIU TRANSPORT INFRASTRUCT                  Emerging              NaN   \n",
+       "4                  BYD CO LTD-H                  Emerging              NaN   \n",
+       "\n",
+       "   averageAbsSurp  ...  raw.sources.bbg.data.MOV_AVG_20D  \\\n",
+       "0             NaN  ...                               NaN   \n",
+       "1             NaN  ...                               NaN   \n",
+       "2             NaN  ...                               NaN   \n",
+       "3             NaN  ...                               NaN   \n",
+       "4             NaN  ...                               NaN   \n",
+       "\n",
+       "  raw.sources.bbg.data.MOV_AVG_50D  raw.sources.bbg.data.REL_1M  \\\n",
+       "0                              NaN                    -2.948991   \n",
+       "1                              NaN                   -11.153650   \n",
+       "2                              NaN                    -4.942474   \n",
+       "3                              NaN                    -0.442226   \n",
+       "4                              NaN                     4.323765   \n",
+       "\n",
+       "   raw.sources.bbg.data.REL_3M  raw.sources.bbg.data.VOLATILITY_90D  \\\n",
+       "0                    16.539820                            33.739412   \n",
+       "1                   -15.944750                            28.909780   \n",
+       "2                     8.047232                            43.979592   \n",
+       "3                    -5.659809                            18.099380   \n",
+       "4                   -10.065620                            41.477470   \n",
+       "\n",
+       "   raw.sources.bbg.data.VOL_PERCENTILE  surpPxChgCorr  ticker    ticker.given  \\\n",
+       "0                                  NaN            NaN    None   PRO US EQUITY   \n",
+       "1                                  NaN            NaN    None   PIC BB EQUITY   \n",
+       "2                                  NaN            NaN    None  RCII US EQUITY   \n",
+       "3                                  NaN            NaN    None  1052 HK EQUITY   \n",
+       "4                                  NaN            NaN    None  1211 HK EQUITY   \n",
+       "\n",
+       "   ticker.ultimate_ticker  \n",
+       "0           PRO US EQUITY  \n",
+       "1           PIC BB EQUITY  \n",
+       "2          RCII US EQUITY  \n",
+       "3      1426564D CH EQUITY  \n",
+       "4          1211 HK EQUITY  \n",
+       "\n",
+       "[5 rows x 63 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_json(f'http://localhost:5000/tableau/data/centrale/last/light').head()"
    ]
   },
   {
