sc vs port in sc update

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -6304,6 +6304,313 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# book vs scports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sc_ports = pd.read_json('http://localhost:5000/tableau/data/scport/last')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>asset_currency</th>\n",
+       "      <th>asset_deltaPct</th>\n",
+       "      <th>asset_multiplier</th>\n",
+       "      <th>asset_price</th>\n",
+       "      <th>asset_priceClose</th>\n",
+       "      <th>bbg_id</th>\n",
+       "      <th>bbg_ticker</th>\n",
+       "      <th>bbg_underlyingPrice</th>\n",
+       "      <th>ib_conid</th>\n",
+       "      <th>internal_underlyingId</th>\n",
+       "      <th>...</th>\n",
+       "      <th>position_tag</th>\n",
+       "      <th>position_theta</th>\n",
+       "      <th>position_underlying_MonthlyCut</th>\n",
+       "      <th>position_underlying_NavPct</th>\n",
+       "      <th>position_underlying_NetDelta</th>\n",
+       "      <th>position_underlying_PnlDailyCut</th>\n",
+       "      <th>position_underlying_PnlMonthlyCut</th>\n",
+       "      <th>position_underlying_delta</th>\n",
+       "      <th>snapshot_date</th>\n",
+       "      <th>snapshot_datetime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CHF</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.818600</td>\n",
+       "      <td>0.8186</td>\n",
+       "      <td>EQ0000000006766858</td>\n",
+       "      <td>ARYN SW EQUITY</td>\n",
+       "      <td>0.8186</td>\n",
+       "      <td>53524699</td>\n",
+       "      <td>EQ0000000006766858</td>\n",
+       "      <td>...</td>\n",
+       "      <td>tteu</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000710</td>\n",
+       "      <td>5000.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.048540</td>\n",
+       "      <td>5000.000000</td>\n",
+       "      <td>2019-08-06</td>\n",
+       "      <td>2019-08-06 10:35:24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CHF</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1918.000000</td>\n",
+       "      <td>1918.0000</td>\n",
+       "      <td>EQ0030073000002000</td>\n",
+       "      <td>BARN SW EQUITY</td>\n",
+       "      <td>1918.0000</td>\n",
+       "      <td>5800796</td>\n",
+       "      <td>EQ0030073000002000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>scvoleu</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.016639</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.428764</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>2019-08-06</td>\n",
+       "      <td>2019-08-06 10:35:24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CHF</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.225000</td>\n",
+       "      <td>11.2250</td>\n",
+       "      <td>EQ0011566200002000</td>\n",
+       "      <td>CSGN SW EQUITY</td>\n",
+       "      <td>11.2250</td>\n",
+       "      <td>262782</td>\n",
+       "      <td>EQ0011566200002000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>sceu</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.011285</td>\n",
+       "      <td>5794.321375</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.511809</td>\n",
+       "      <td>3100.000000</td>\n",
+       "      <td>2019-08-06</td>\n",
+       "      <td>2019-08-06 10:35:24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CHF</td>\n",
+       "      <td>-0.646366</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0.281974</td>\n",
+       "      <td>0.3300</td>\n",
+       "      <td>EO11566220190802016D0002</td>\n",
+       "      <td>CSGE GR 08/16/19 P11.4 EQUITY</td>\n",
+       "      <td>11.2250</td>\n",
+       "      <td>366582295</td>\n",
+       "      <td>EQ0011566200002000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>15.845661</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1292.731806</td>\n",
+       "      <td>2019-08-06</td>\n",
+       "      <td>2019-08-06 10:35:24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CHF</td>\n",
+       "      <td>0.341851</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0.631877</td>\n",
+       "      <td>0.5400</td>\n",
+       "      <td>EO1156622020120181A80003</td>\n",
+       "      <td>CSGN SW 12/18/20 C13 EQUITY</td>\n",
+       "      <td>11.2250</td>\n",
+       "      <td>340394965</td>\n",
+       "      <td>EQ0011566200002000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-4.171229</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1401.589568</td>\n",
+       "      <td>2019-08-06</td>\n",
+       "      <td>2019-08-06 10:35:24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  asset_currency  asset_deltaPct  asset_multiplier  asset_price  \\\n",
+       "0            CHF        1.000000                 1     0.818600   \n",
+       "1            CHF        1.000000                 1  1918.000000   \n",
+       "2            CHF        1.000000                 1    11.225000   \n",
+       "3            CHF       -0.646366               100     0.281974   \n",
+       "4            CHF        0.341851               100     0.631877   \n",
+       "\n",
+       "   asset_priceClose                    bbg_id                     bbg_ticker  \\\n",
+       "0            0.8186        EQ0000000006766858                 ARYN SW EQUITY   \n",
+       "1         1918.0000        EQ0030073000002000                 BARN SW EQUITY   \n",
+       "2           11.2250        EQ0011566200002000                 CSGN SW EQUITY   \n",
+       "3            0.3300  EO11566220190802016D0002  CSGE GR 08/16/19 P11.4 EQUITY   \n",
+       "4            0.5400  EO1156622020120181A80003    CSGN SW 12/18/20 C13 EQUITY   \n",
+       "\n",
+       "   bbg_underlyingPrice   ib_conid internal_underlyingId  ... position_tag  \\\n",
+       "0               0.8186   53524699    EQ0000000006766858  ...         tteu   \n",
+       "1            1918.0000    5800796    EQ0030073000002000  ...      scvoleu   \n",
+       "2              11.2250     262782    EQ0011566200002000  ...         sceu   \n",
+       "3              11.2250  366582295    EQ0011566200002000  ...         None   \n",
+       "4              11.2250  340394965    EQ0011566200002000  ...         None   \n",
+       "\n",
+       "   position_theta  position_underlying_MonthlyCut  position_underlying_NavPct  \\\n",
+       "0        0.000000                             NaN                    0.000710   \n",
+       "1        0.000000                             NaN                    0.016639   \n",
+       "2        0.000000                             NaN                    0.011285   \n",
+       "3       15.845661                             NaN                         NaN   \n",
+       "4       -4.171229                             NaN                         NaN   \n",
+       "\n",
+       "   position_underlying_NetDelta  position_underlying_PnlDailyCut  \\\n",
+       "0                   5000.000000                              0.0   \n",
+       "1                     50.000000                              0.0   \n",
+       "2                   5794.321375                              0.0   \n",
+       "3                           NaN                              NaN   \n",
+       "4                           NaN                              NaN   \n",
+       "\n",
+       "  position_underlying_PnlMonthlyCut  position_underlying_delta  snapshot_date  \\\n",
+       "0                         -0.048540                5000.000000     2019-08-06   \n",
+       "1                         -0.428764                  50.000000     2019-08-06   \n",
+       "2                         -1.511809                3100.000000     2019-08-06   \n",
+       "3                               NaN                1292.731806     2019-08-06   \n",
+       "4                               NaN                1401.589568     2019-08-06   \n",
+       "\n",
+       "     snapshot_datetime  \n",
+       "0  2019-08-06 10:35:24  \n",
+       "1  2019-08-06 10:35:24  \n",
+       "2  2019-08-06 10:35:24  \n",
+       "3  2019-08-06 10:35:24  \n",
+       "4  2019-08-06 10:35:24  \n",
+       "\n",
+       "[5 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_book = pd.read_json('http://localhost:5000/tableau/data/bookexposure/last')\n",
+    "df_book.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': 2806,\n",
+       " 'parameters': {'wAS_L': 0.15,\n",
+       "  'wEU_L': 0.3,\n",
+       "  'wEU_S': -0.09999999999999999,\n",
+       "  'wJ_L': 0.1,\n",
+       "  'wUS_L': 0.45,\n",
+       "  'wUS_S': -0.15},\n",
+       " 'status': 'ok',\n",
+       " 'submittedDatetime': '2019-08-21T17:20:49.350972'}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wUS_L = 0.45\n",
+    "wEU_L = 0.3\n",
+    "wAS_L = 0.15\n",
+    "wJ_L = 0.10\n",
+    "wUS_S = -1*wUS_L/3\n",
+    "wEU_S = -1*wEU_L/3\n",
+    "\n",
+    "res = requests.post(\n",
+    "    f'http://localhost:5000/tableau/data/bookexposure/diff', \n",
+    "    json={ \n",
+    "        'data': df_book.to_dict(orient='records'),\n",
+    "        'parameters': {\n",
+    "            'wUS_L': wUS_L,\n",
+    "            'wEU_L': wEU_L,\n",
+    "            'wAS_L': wAS_L,\n",
+    "            'wJ_L': wJ_L,\n",
+    "            'wUS_S': -1*wUS_L/3,\n",
+    "            'wEU_S': -1*wEU_L/3\n",
+    "        }\n",
+    "    }\n",
+    "    , \n",
+    "    auth=HTTPBasicAuth(os.getenv('BASIC_AUTH_USERNAME'), os.getenv('BASIC_AUTH_PASSWORD'))\n",
+    ")\n",
+    "json.loads(res.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
